--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "homepage": "https://okkonie.github.io",
   "private": true,
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
